chore: RabbitMQ 설정 제거 및 테스트 단순화, 분산락 없는 동시 처리 시 외부 발송 중복 케이스 명시, bulk SQL 테스트 정리